fix: explicitly export GitHub Secrets in deployment workflow
Add explicit export statements for PROD_DB_PASSWORD, PROD_MONGO_PASSWORD,
and PROD_OPENAI_API_KEY environment variables to ensure they are properly
expanded in docker-compose.yml template.

This fixes the issue where secrets were not being substituted, resulting
in empty passwords in the production deployment.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,6 +103,7 @@ jobs:
             fi
 
             # Create docker-compose.yml with secrets from GitHub
+            # Use environment variables directly (they are exported by ssh-action)
             cat > docker-compose.yml <<EOF
             services:
               datawhisper-api:
