fix: correct deploy directory path to /root/datawhisper/api-deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            cd /root/datawhisper.me.api
+            cd /root/datawhisper/api-deploy
             git pull origin main
             
             # Export secrets to environment
