--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,10 @@ jobs:
           port: ${{ secrets.SERVER_PORT }}
           script: |
             cd /root/datawhisper/api-deploy
-            git pull origin main
-            
+
+            # Update docker-compose.yml with CORS_ALLOWED_ORIGINS
+            sed -i '/AI_SERVICE_URL=http:\/\/datawhisper-ai:5003/a\      - CORS_ALLOWED_ORIGINS=\${CORS_ALLOWED_ORIGINS:-https://datawhisper.me}' docker-compose.yml
+
             # Export secrets to environment
             export DB_PASSWORD="${{ secrets.PROD_DB_PASSWORD }}"
             export MONGO_PASSWORD="${{ secrets.PROD_MONGO_PASSWORD }}"
