refactor: remove LARGE_DATASET_THRESHOLD from AI service
- Remove LARGE_DATASET_THRESHOLD from config.py
- Remove total_rows parameter from generate_data_sql()
- Update deploy.yml to use LARGE_DATASET_THRESHOLD secret from GitHub
- Pagination logic is handled by .NET API only

This simplifies AI service and removes dead code.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
             export RATE_LIMIT_GLOBAL="${{ secrets.PROD_RATE_LIMIT_GLOBAL }}"
             export RATE_LIMIT_GLOBAL_FALLBACK="${{ secrets.PROD_RATE_LIMIT_GLOBAL_FALLBACK }}"
             export CORS_ALLOWED_ORIGINS="${{ secrets.CORS_ALLOWED_ORIGINS }}"
+            export LARGE_DATASET_THRESHOLD="${{ secrets.LARGE_DATASET_THRESHOLD }}"
             
             # Restart containers with new environment
             docker compose down
